support kernel chaos

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - bases/pingcap.com_networkchaos.yaml
 - bases/pingcap.com_iochaos.yaml
 - bases/pingcap.com_timechaos.yaml
+- bases/pingcap.com_kernelchaos.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
