--- a/helm/chaos-mesh/templates/collector-rbac.yaml
+++ b/helm/chaos-mesh/templates/collector-rbac.yaml
@@ -76,6 +76,7 @@ rules:
       - networkchaos
       - iochaos
       - timechaos
+      - kernelchaos
     verbs: ["*"]
 ---
 kind: ClusterRoleBinding
@@ -136,6 +137,7 @@ rules:
       - networkchaos
       - iochaos
       - timechaos
+      - kernelchaos
     verbs: ["*"]
 ---
 kind: RoleBinding
