--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -253,6 +253,240 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.2.5
   creationTimestamp: null
+  name: kernelchaos.pingcap.com
+spec:
+  group: pingcap.com
+  names:
+    kind: KernelChaos
+    listKind: KernelChaosList
+    plural: kernelchaos
+    singular: kernelchaos
+  scope: Namespaced
+  validation:
+    openAPIV3Schema:
+      description: KernelChaos is the Schema for the kernelchaos API
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          description: Spec defines the behavior of a kernel chaos experiment
+          properties:
+            duration:
+              description: Duration represents the duration of the chaos action
+              type: string
+            failKernRequest:
+              description: FailKernRequest defines the request of kernel injection
+              properties:
+                callchain:
+                  items:
+                    description: Frame defines the function signature and predicate
+                      in function's body
+                    properties:
+                      funcname:
+                        type: string
+                      parameters:
+                        type: string
+                      predicate:
+                        type: string
+                    type: object
+                  type: array
+                failtype:
+                  format: int32
+                  type: integer
+                headers:
+                  items:
+                    type: string
+                  type: array
+                probability:
+                  format: int32
+                  type: integer
+                times:
+                  format: int32
+                  type: integer
+              required:
+              - failtype
+              type: object
+            mode:
+              description: 'Mode defines the mode to run chaos action. Supported mode:
+                one / all / fixed / fixed-percent / random-max-percent'
+              type: string
+            nextRecover:
+              description: Next time when this action will be recovered
+              format: date-time
+              type: string
+            nextStart:
+              description: Next time when this action will be applied again
+              format: date-time
+              type: string
+            scheduler:
+              description: Scheduler defines some schedule rules to control the running
+                time of the chaos experiment about time.
+              properties:
+                cron:
+                  description: "Cron defines a cron job rule. \n Some rule examples:
+                    \"0 30 * * * *\" means to \"Every hour on the half hour\" \"@hourly\"
+                    \     means to \"Every hour\" \"@every 1h30m\" means to \"Every
+                    hour thirty\" \n More rule info: https://godoc.org/github.com/robfig/cron"
+                  type: string
+              required:
+              - cron
+              type: object
+            selector:
+              description: Selector is used to select pods that are used to inject
+                chaos action.
+              properties:
+                annotationSelectors:
+                  additionalProperties:
+                    type: string
+                  description: Map of string keys and values that can be used to select
+                    objects. A selector based on annotations.
+                  type: object
+                fieldSelectors:
+                  additionalProperties:
+                    type: string
+                  description: Map of string keys and values that can be used to select
+                    objects. A selector based on fields.
+                  type: object
+                labelSelectors:
+                  additionalProperties:
+                    type: string
+                  description: Map of string keys and values that can be used to select
+                    objects. A selector based on labels.
+                  type: object
+                namespaces:
+                  description: Namespaces is a set of namespace to which objects belong.
+                  items:
+                    type: string
+                  type: array
+                nodeSelectors:
+                  additionalProperties:
+                    type: string
+                  description: Map of string keys and values that can be used to select
+                    nodes. Selector which must match a node's labels, and objects
+                    must belong to these selected nodes.
+                  type: object
+                nodes:
+                  description: Nodes is a set of node name and objects must belong
+                    to these nodes.
+                  items:
+                    type: string
+                  type: array
+                podPhaseSelectors:
+                  description: 'PodPhaseSelectors is a set of condition of a pod at
+                    the current time. supported value: Pending / Running / Succeeded
+                    / Failed / Unknown'
+                  items:
+                    type: string
+                  type: array
+                pods:
+                  additionalProperties:
+                    items:
+                      type: string
+                    type: array
+                  description: Pods is a map of string keys and a set values that
+                    used to select pods. The key defines the namespace which pods
+                    belong, and the each values is a set of pod names.
+                  type: object
+              type: object
+            value:
+              description: Value is required when the mode is set to `FixedPodMode`
+                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
+                provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
+                provide a number from 0-100 to specify the max % of pods the server
+                can do chaos action. If `RandomMaxPercentPodMod`,  provide a number
+                from 0-100 to specify the % of pods to do chaos action
+              type: string
+          required:
+          - failKernRequest
+          - mode
+          - selector
+          type: object
+        status:
+          description: Most recently observed status of the kernel chaos experiment
+          properties:
+            experiment:
+              description: Experiment records the last experiment state.
+              properties:
+                endTime:
+                  format: date-time
+                  type: string
+                phase:
+                  description: ExperimentPhase is the current status of chaos experiment.
+                  type: string
+                podChaos:
+                  items:
+                    description: PodStatus represents information about the status
+                      of a pod in chaos experiment.
+                    properties:
+                      action:
+                        type: string
+                      hostIP:
+                        type: string
+                      message:
+                        description: A brief CamelCase message indicating details
+                          about the chaos action. e.g. "delete this pod" or "pause
+                          this pod duration 5m"
+                        type: string
+                      name:
+                        type: string
+                      namespace:
+                        type: string
+                      podIP:
+                        type: string
+                    required:
+                    - action
+                    - hostIP
+                    - name
+                    - namespace
+                    - podIP
+                    type: object
+                  type: array
+                reason:
+                  type: string
+                startTime:
+                  format: date-time
+                  type: string
+              type: object
+            phase:
+              description: Phase is the chaos status.
+              type: string
+            reason:
+              type: string
+          required:
+          - experiment
+          - phase
+          type: object
+      required:
+      - spec
+      type: object
+  version: v1alpha1
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.2.5
+  creationTimestamp: null
   name: networkchaos.pingcap.com
 spec:
   group: pingcap.com
