make changes according to review

--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -144,7 +144,10 @@ webhook:
   # Setup the webhook using cert-manager
   certManager:
     enabled: false
-    autoDeleteSecret: false
+
+  # If the deleteSecret is true, we will create a job to delete the secret, Otherwise, do nothing
+  deleteSecret: true
+
   # FailurePolicy defines how unrecognized errors and timeout errors from the admission webhook are handled.
   # https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#failure-policy
   FailurePolicy: Ignore
