--- a/helm/chaos-mesh/templates/pre-delete-job.yaml
+++ b/helm/chaos-mesh/templates/pre-delete-job.yaml
@@ -1,4 +1,4 @@
-{{ if not .Values.webhook.certManager.autoDeleteSecret }}
+{{ if .Values.webhook.deleteSecret }}
 apiVersion: batch/v1
 kind: Job
 metadata:
