--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -834,6 +834,14 @@ spec:
         spec:
           description: Spec defines the behavior of a time chaos experiment
           properties:
+            clockIds:
+              description: ClockIds defines all affected clock id All available options
+                are ["CLOCK_REALTIME","CLOCK_MONOTONIC","CLOCK_PROCESS_CPUTIME_ID","CLOCK_THREAD_CPUTIME_ID",
+                "CLOCK_MONOTONIC_RAW","CLOCK_REALTIME_COARSE","CLOCK_MONOTONIC_COARSE","CLOCK_BOOTTIME","CLOCK_REALTIME_ALARM",
+                "CLOCK_BOOTTIME_ALARM"] Default value is ["CLOCK_REALTIME"]
+              items:
+                type: string
+              type: array
             duration:
               description: Duration represents the duration of the chaos action
               type: string
