Support cert-manager for certificate management (#277)

--- a/helm/chaos-mesh/templates/pre-delete-job.yaml
+++ b/helm/chaos-mesh/templates/pre-delete-job.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.webhook.deleteSecret }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -34,5 +35,5 @@ spec:
             - "-c"
             - |
               set -e
-              kubectl delete mutatingwebhookconfigurations.admissionregistration.k8s.io chaos-mesh-sidecar-injector || true // Auto Delete mutatingwebhookconfigurations
-              kubectl delete secrets -n {{ .Release.Namespace }} webhook-certs || true
+              kubectl delete secrets -n {{ .Release.Namespace }} {{ template "chaos-mesh.certs" . }} || true
+{{- end }}
