--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -18,8 +18,8 @@ controllerManager:
 
   replicaCount: 1
 
-  image: yisa/chaos:latest
-  imagePullPolicy: IfNotPresent
+  image: pingcap/chaos-mesh:latest
+  imagePullPolicy: Never
 
   nameOverride: ""
   fullnameOverride: ""
@@ -49,7 +49,7 @@ controllerManager:
 
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
-  imagePullPolicy: IfNotPresent
+  imagePullPolicy: Never
   grpcPort: 31767
   httpPort: 31766
 
@@ -73,7 +73,7 @@ dashboard:
   serviceAccount: chaos-dashboard
 
   image: pingcap/chaos-dashboard:latest
-  imagePullPolicy: IfNotPresent
+  imagePullPolicy: Never
 
   nodeSelector: {}
 
@@ -105,7 +105,7 @@ prometheus:
   serviceAccount: prometheus
 
   image: prom/prometheus:v2.15.2
-  imagePullPolicy: IfNotPresent
+  imagePullPolicy: Never
 
   nodeSelector: {}
 
