--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -105,7 +105,7 @@ prometheus:
   serviceAccount: prometheus
 
   image: prom/prometheus:v2.15.2
-  imagePullPolicy: Never
+  imagePullPolicy: IfNotPresent
 
   nodeSelector: {}
 
