--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -19,7 +19,7 @@ controllerManager:
   replicaCount: 1
 
   image: pingcap/chaos-mesh:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
 
   nameOverride: ""
   fullnameOverride: ""
@@ -49,7 +49,7 @@ controllerManager:
 
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
   grpcPort: 31767
   httpPort: 31766
 
@@ -73,7 +73,7 @@ dashboard:
   serviceAccount: chaos-dashboard
 
   image: pingcap/chaos-dashboard:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
 
   nodeSelector: {}
 
