--- a/helm/chaos-mesh/templates/post-install-webhook-job.yaml
+++ b/helm/chaos-mesh/templates/post-install-webhook-job.yaml
@@ -56,6 +56,18 @@ spec:
                       name: {{ template "chaos-mesh.svc" . }}
                       namespace: {{ .Release.Namespace }}
                       path: "/inject-v1-pod"
+              ---
+              apiVersion: admissionregistration.k8s.io/v1beta1
+              kind: ValidatingWebhookConfiguration
+              metadata:
+                name: {{ template "chaos-mesh.validation" . }}
+              webhooks:
+                - name: {{ template "chaos-mesh.webhook" . }}
+                  clientConfig:
+                    service:
+                      name: {{ template "chaos-mesh.svc" . }}
+                      namespace: {{ .Release.Namespace }}
+                      path: "/validate-v1alpha1-chaos"
+                    caBundle: "${CA_BUNDLE}"
               EOF
-
 {{- end }}
