--- a/config/crd/bases/pingcap.com_networkchaos.yaml
+++ b/config/crd/bases/pingcap.com_networkchaos.yaml
@@ -39,7 +39,7 @@ spec:
                 action: delay Default action: delay'
               type: string
             corrupt:
-              description: Corrupt represents the detail about loss action
+              description: Corrupt represents the detail about corrupt action
               properties:
                 correlation:
                   type: string
@@ -58,6 +58,20 @@ spec:
                   type: string
                 latency:
                   type: string
+                reorder:
+                  description: ReorderSpec defines details of packet reorder.
+                  properties:
+                    correlation:
+                      type: string
+                    gap:
+                      type: integer
+                    reorder:
+                      type: string
+                  required:
+                  - correlation
+                  - gap
+                  - reorder
+                  type: object
               required:
               - correlation
               - jitter
