use docker mirror in install.sh
Signed-off-by: cwen0 <cwenyin0@gmail.com>

--- a/helm/chaos-mesh/templates/post-install-webhook-job.yaml
+++ b/helm/chaos-mesh/templates/post-install-webhook-job.yaml
@@ -28,7 +28,7 @@ spec:
       serviceAccountName: {{ .Values.controllerManager.serviceAccount }}
       containers:
         - name: "{{ .Release.Name }}-job-mw"
-          image: bitnami/kubectl:latest
+          image: {{ .Values.kubectlImage }}
           imagePullPolicy: IfNotPresent
           command:
             - "sh"
