--- a/helm/chaos-mesh/templates/post-install-create-cert-job.yaml
+++ b/helm/chaos-mesh/templates/post-install-create-cert-job.yaml
@@ -28,7 +28,7 @@ spec:
       serviceAccountName: {{ .Values.controllerManager.serviceAccount }}
       containers:
         - name: "{{ .Release.Name }}-job-certs"
-          image: bitnami/kubectl:latest
+          image: {{ .Values.kubectlImage }}
           imagePullPolicy: IfNotPresent
           command:
             - "sh"
