--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -18,7 +18,7 @@ controllerManager:
 
   replicaCount: 1
 
-  image: pingcap/chaos-mesh:latest
+  image: trow.kube-public:31000/pingcap/chaos-mesh:latest
   imagePullPolicy: Always
 
   nameOverride: ""
@@ -48,7 +48,7 @@ controllerManager:
   podAnnotations: {}
 
 chaosDaemon:
-  image: pingcap/chaos-daemon:latest
+  image: trow.kube-public:31000/pingcap/chaos-daemon:latest
   imagePullPolicy: Always
   grpcPort: 31767
   httpPort: 31766
@@ -72,7 +72,7 @@ dashboard:
 
   serviceAccount: chaos-dashboard
 
-  image: pingcap/chaos-dashboard:latest
+  image: trow.kube-public:31000/pingcap/chaos-dashboard:latest
   imagePullPolicy: Always
 
   nodeSelector: {}
