--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -253,6 +253,116 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.2.5
   creationTimestamp: null
+  name: memorychaos.pingcap.com
+spec:
+  group: pingcap.com
+  names:
+    kind: MemoryChaos
+    listKind: MemoryChaosList
+    plural: memorychaos
+    singular: memorychaos
+  scope: Namespaced
+  validation:
+    openAPIV3Schema:
+      description: MemoryChaos is the Schema for the memorychaos API
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          properties:
+            quota:
+              description: 'Quota specifies the strict memory quota a pod should have.
+                Support units: KiB'
+              type: string
+          required:
+          - quota
+          type: object
+        status:
+          properties:
+            experiment:
+              description: Experiment records the last experiment state.
+              properties:
+                endTime:
+                  format: date-time
+                  type: string
+                phase:
+                  description: ExperimentPhase is the current status of chaos experiment.
+                  type: string
+                podChaos:
+                  items:
+                    description: PodStatus represents information about the status
+                      of a pod in chaos experiment.
+                    properties:
+                      action:
+                        type: string
+                      hostIP:
+                        type: string
+                      message:
+                        description: A brief CamelCase message indicating details
+                          about the chaos action. e.g. "delete this pod" or "pause
+                          this pod duration 5m"
+                        type: string
+                      name:
+                        type: string
+                      namespace:
+                        type: string
+                      podIP:
+                        type: string
+                    required:
+                    - action
+                    - hostIP
+                    - name
+                    - namespace
+                    - podIP
+                    type: object
+                  type: array
+                reason:
+                  type: string
+                startTime:
+                  format: date-time
+                  type: string
+              type: object
+            phase:
+              description: Phase is the chaos status.
+              type: string
+            reason:
+              type: string
+          required:
+          - experiment
+          - phase
+          type: object
+      required:
+      - spec
+      - status
+      type: object
+  version: v1alpha1
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.2.5
+  creationTimestamp: null
   name: networkchaos.pingcap.com
 spec:
   group: pingcap.com
