--- a/helm/chaos-mesh/templates/collector-mysql.yaml
+++ b/helm/chaos-mesh/templates/collector-mysql.yaml
@@ -50,6 +50,14 @@ spec:
         - name: data
           persistentVolumeClaim:
             claimName: collector-mysql-pv-claim
+      {{- with .Values.dashboard.affinity }}
+      affinity:
+{{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- with .Values.dashboard.tolerations }}
+      tolerations:
+{{ toYaml . | indent 8 }}
+      {{- end }}
 ---
 apiVersion: v1
 kind: ConfigMap
