update kernel chaos docs

--- a/config/crd/bases/pingcap.com_kernelchaos.yaml
+++ b/config/crd/bases/pingcap.com_kernelchaos.yaml
@@ -41,29 +41,60 @@ spec:
               description: FailKernRequest defines the request of kernel injection
               properties:
                 callchain:
+                  description: 'Callchain indicate a special call chain, such as:     ext4_mount       ->
+                    mount_subtree          -> ...             -> should_failslab With
+                    an optional set of predicates and an optional set of parameters,
+                    which used with predicates. You can read call chan and predicate
+                    examples from https://github.com/chaos-mesh/bpfki/tree/develop/examples
+                    to learn more. If no special call chain, just keep Callchain empty,
+                    which means it will fail at any call chain with slab alloc (eg:
+                    kmalloc).'
                   items:
                     description: Frame defines the function signature and predicate
                       in function's body
                     properties:
                       funcname:
+                        description: Funcname can be find from kernel source or `/proc/kallsyms`,
+                          such as `ext4_mount`
                         type: string
                       parameters:
+                        description: Parameters is used with predicate, for example,
+                          if you want to inject slab error in `d_alloc_parallel(struct
+                          dentry *parent, const struct qstr *name)` with a special
+                          name `bananas`, you need to set it to `struct dentry *parent,
+                          const struct qstr *name` otherwise omit it.
                         type: string
                       predicate:
+                        description: Predicate will access the arguments of this Frame,
+                          example with Parameters's, you can set it to `STRNCMP(name->name,
+                          "bananas", 8)` to make inject only with it, or omit it to
+                          inject for all d_alloc_parallel call chain.
                         type: string
                     type: object
                   type: array
                 failtype:
+                  description: 'FailType indicates what to fail, can be set to ''0''
+                    / ''1'' / ''2'' If `0`, indicates slab to fail (should_failslab)
+                    If `1`, indicates alloc_page to fail (should_fail_alloc_page)
+                    If `2`, indicates bio to fail (should_fail_bio) You can read:   1.
+                    https://www.kernel.org/doc/html/latest/fault-injection/fault-injection.html   2.
+                    http://github.com/iovisor/bcc/blob/master/tools/inject_example.txt
+                    to learn more'
                   format: int32
                   type: integer
                 headers:
+                  description: 'Headers indicates the appropriate kernel headers you
+                    need. Eg: "linux/mmzone.h", "linux/blkdev.h" and so on'
                   items:
                     type: string
                   type: array
                 probability:
+                  description: Probability indicates the fails with probability. If
+                    you want 1%, please set this field with 1.
                   format: int32
                   type: integer
                 times:
+                  description: Times indicates the max times of fails.
                   format: int32
                   type: integer
               required:
