--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -1121,6 +1121,10 @@ spec:
               items:
                 type: string
               type: array
+            containerName:
+              description: ContainerName indicates the name of affected container.
+                If not set, all containers will be injected
+              type: string
             duration:
               description: Duration represents the duration of the chaos action
               type: string
