--- a/config/crd/bases/pingcap.com_stresschaos.yaml
+++ b/config/crd/bases/pingcap.com_stresschaos.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.2.6
   creationTimestamp: null
   name: stresschaos.pingcap.com
 spec:
@@ -17,7 +17,7 @@ spec:
   scope: Namespaced
   validation:
     openAPIV3Schema:
-      description: StressChaos is the Schema for the timechaos API
+      description: StressChaos is the Schema for the stresschaos API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -121,17 +121,7 @@ spec:
               type: object
             stressors:
               description: Stressors defines the delta time of injected program
-              properties:
-                nsec:
-                  format: int64
-                  type: integer
-                sec:
-                  format: int64
-                  type: integer
-              required:
-              - nsec
-              - sec
-              type: object
+              type: string
             value:
               description: Value is required when the mode is set to `FixedPodMode`
                 / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
@@ -198,9 +188,12 @@ spec:
               type: string
             reason:
               type: string
+            uuid:
+              type: string
           required:
           - experiment
           - phase
+          - uuid
           type: object
       required:
       - spec
