--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.2.6
   creationTimestamp: null
   name: iochaos.pingcap.com
 spec:
@@ -251,7 +251,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.2.6
   creationTimestamp: null
   name: kernelchaos.pingcap.com
 spec:
@@ -516,7 +516,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.2.6
   creationTimestamp: null
   name: networkchaos.pingcap.com
 spec:
@@ -862,7 +862,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.2.6
   creationTimestamp: null
   name: podchaos.pingcap.com
 spec:
@@ -1083,7 +1083,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.2.6
   creationTimestamp: null
   name: stresschaos.pingcap.com
 spec:
@@ -1096,7 +1096,7 @@ spec:
   scope: Namespaced
   validation:
     openAPIV3Schema:
-      description: StressChaos is the Schema for the timechaos API
+      description: StressChaos is the Schema for the stresschaos API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -1200,17 +1200,7 @@ spec:
               type: object
             stressors:
               description: Stressors defines the delta time of injected program
-              properties:
-                nsec:
-                  format: int64
-                  type: integer
-                sec:
-                  format: int64
-                  type: integer
-              required:
-              - nsec
-              - sec
-              type: object
+              type: string
             value:
               description: Value is required when the mode is set to `FixedPodMode`
                 / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
@@ -1277,9 +1267,12 @@ spec:
               type: string
             reason:
               type: string
+            uuid:
+              type: string
           required:
           - experiment
           - phase
+          - uuid
           type: object
       required:
       - spec
@@ -1300,7 +1293,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.2.6
   creationTimestamp: null
   name: timechaos.pingcap.com
 spec:
