--- a/config/crd/bases/pingcap.com_timechaos.yaml
+++ b/config/crd/bases/pingcap.com_timechaos.yaml
@@ -42,6 +42,12 @@ spec:
               items:
                 type: string
               type: array
+            containerNames:
+              description: ContainerName indicates the name of affected container.
+                If not set, all containers will be injected
+              items:
+                type: string
+              type: array
             duration:
               description: Duration represents the duration of the chaos action
               type: string
@@ -149,9 +155,7 @@ spec:
                 from 0-100 to specify the % of pods to do chaos action
               type: string
           required:
-          - duration
           - mode
-          - scheduler
           - selector
           - timeOffset
           type: object
