--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -72,6 +72,7 @@ rules:
     - iochaos
     - timechaos
     - kernelchaos
+    - stresschaos
   verbs: ["*"]
 ---
 kind: ClusterRoleBinding
@@ -136,6 +137,7 @@ rules:
   - iochaos
   - timechaos
   - kernelchaos
+  - stresschaos
   verbs: ["*"]
 ---
 kind: RoleBinding
