--- a/images/chaos-dashboard/package.json
+++ b/images/chaos-dashboard/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "acorn": "^7.1.1",
     "antd": "^3.26.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
