--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -57,7 +57,7 @@ spec:
               type: integer
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
-                one / all / fixed / fixed-percent / random-max-percent'
+                exact / one / all / fixed / fixed-percent / random-max-percent'
               type: string
             nextRecover:
               description: Next time when this action will be recovered
@@ -138,12 +138,13 @@ spec:
                   type: object
               type: object
             value:
-              description: Value is required when the mode is set to `FixedPodMode`
-                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
-                provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
-                provide a number from 0-100 to specify the max % of pods the server
-                can do chaos action. IF `RandomMaxPercentPodMod`,  provide a number
-                from 0-100 to specify the % of pods to do chaos action
+              description: Value is required when the mode is set to `ExactPodMod`
+                / `FixedPodMode` / `FixedPercentPodMod` / `RandomMaxPercentPodMod`.
+                If `ExactPodMod`, provide the name of the pod to do chaos action If
+                `FixedPodMode`, provide an integer of pods to do chaos action. If
+                `FixedPercentPodMod`, provide a number from 0-100 to specify the max
+                % of pods the server can do chaos action. IF `RandomMaxPercentPodMod`,  provide
+                a number from 0-100 to specify the % of pods to do chaos action
               type: string
           required:
           - action
