--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -76,7 +76,7 @@ spec:
               type: array
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
-                one / all / fixed / fixed-percent / random-max-percent'
+                exact / one / all / fixed / fixed-percent / random-max-percent'
               type: string
             nextRecover:
               description: Next time when this action will be recovered.
@@ -166,7 +166,8 @@ spec:
               type: object
             value:
               description: Value is required when the mode is set to `FixedPodMode`
-                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
+                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `ExactPodMod`,
+                provide the name of the pod to do chaos action If `FixedPodMode`,
                 provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
                 provide a number from 0-100 to specify the max % of pods the server
                 can do chaos action. IF `RandomMaxPercentPodMod`,  provide a number
@@ -349,7 +350,7 @@ spec:
               type: object
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
-                one / all / fixed / fixed-percent / random-max-percent'
+                exact / one / all / fixed / fixed-percent / random-max-percent'
               type: string
             nextRecover:
               description: Next time when this action will be recovered
@@ -431,7 +432,8 @@ spec:
               type: object
             value:
               description: Value is required when the mode is set to `FixedPodMode`
-                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
+                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `ExactPodMod`,
+                provide the name of the pod to do chaos action If `FixedPodMode`,
                 provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
                 provide a number from 0-100 to specify the max % of pods the server
                 can do chaos action. If `RandomMaxPercentPodMod`,  provide a number
@@ -619,7 +621,7 @@ spec:
               type: object
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
-                one / all / fixed / fixed-percent / random-max-percent'
+                exact / one / all / fixed / fixed-percent / random-max-percent'
               type: string
             nextRecover:
               description: Next time when this action will be recovered
@@ -776,7 +778,8 @@ spec:
               type: object
             value:
               description: Value is required when the mode is set to `FixedPodMode`
-                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
+                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `ExactPodMod`,
+                provide the name of the pod to do chaos action If `FixedPodMode`,
                 provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
                 provide a number from 0-100 to specify the max % of pods the server
                 can do chaos action. If `RandomMaxPercentPodMod`,  provide a number
@@ -915,7 +918,7 @@ spec:
               type: integer
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
-                one / all / fixed / fixed-percent / random-max-percent'
+                exact / one / all / fixed / fixed-percent / random-max-percent'
               type: string
             nextRecover:
               description: Next time when this action will be recovered
@@ -996,12 +999,13 @@ spec:
                   type: object
               type: object
             value:
-              description: Value is required when the mode is set to `FixedPodMode`
-                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
-                provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
-                provide a number from 0-100 to specify the max % of pods the server
-                can do chaos action. IF `RandomMaxPercentPodMod`,  provide a number
-                from 0-100 to specify the % of pods to do chaos action
+              description: Value is required when the mode is set to `ExactPodMod`
+                / `FixedPodMode` / `FixedPercentPodMod` / `RandomMaxPercentPodMod`.
+                If `ExactPodMod`, provide the name of the pod to do chaos action If
+                `FixedPodMode`, provide an integer of pods to do chaos action. If
+                `FixedPercentPodMod`, provide a number from 0-100 to specify the max
+                % of pods the server can do chaos action. IF `RandomMaxPercentPodMod`,  provide
+                a number from 0-100 to specify the % of pods to do chaos action
               type: string
           required:
           - action
@@ -1132,7 +1136,7 @@ spec:
               type: string
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
-                one / all / fixed / fixed-percent / random-max-percent'
+                exact / one / all / fixed / fixed-percent / random-max-percent'
               type: string
             nextRecover:
               description: Next time when this action will be recovered
@@ -1227,7 +1231,8 @@ spec:
               type: object
             value:
               description: Value is required when the mode is set to `FixedPodMode`
-                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
+                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `ExactPodMod`,
+                provide the name of the pod to do chaos action If `FixedPodMode`,
                 provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
                 provide a number from 0-100 to specify the max % of pods the server
                 can do chaos action. If `RandomMaxPercentPodMod`,  provide a number
