fix wrong pd iochaos example
Signed-off-by: yeya24 <yb532204897@gmail.com>

--- a/examples/chaosfs-configmap/pd-configmap.yaml
+++ b/examples/chaosfs-configmap/pd-configmap.yaml
@@ -32,8 +32,8 @@ data:
         - -original=/var/lib/pd/fuse-data
         - -mountpoint=/var/lib/pd/data
       volumeMounts:
-        - name: tikv
-          mountPath: /var/lib/tikv
+        - name: pd
+          mountPath: /var/lib/pd
           mountPropagation: Bidirectional
     volumeMounts:
     - name: pd
