--- a/config/crd/bases/pingcap.com_kernelchaos.yaml
+++ b/config/crd/bases/pingcap.com_kernelchaos.yaml
@@ -112,6 +112,17 @@ spec:
               description: Next time when this action will be applied again
               format: date-time
               type: string
+            protector:
+              description: Protector protects the target cluster from being corrupted
+                by the chaos
+              properties:
+                maxInjectPercent:
+                  description: MaxInjectPercent specifies the ratio of maximum pods
+                    involved in the chaos to be injected later.  A value of less than
+                    or equal to 0, or greater than 100, we see it as illegal. It takes
+                    no effects for the protection.
+                  type: integer
+              type: object
             scheduler:
               description: Scheduler defines some schedule rules to control the running
                 time of the chaos experiment about time.
@@ -241,6 +252,8 @@ spec:
                   format: date-time
                   type: string
               type: object
+            maxInjectNumPods:
+              type: integer
             phase:
               description: Phase is the chaos status.
               type: string
