--- a/config/crd/bases/pingcap.com_iochaos.yaml
+++ b/config/crd/bases/pingcap.com_iochaos.yaml
@@ -96,6 +96,17 @@ spec:
               description: 'Percent defines the percentage of injection errors and
                 provides a number from 0-100. default: 100.'
               type: string
+            protector:
+              description: Protector protects the target cluster from being corrupted
+                by the chaos
+              properties:
+                maxInjectPercent:
+                  description: MaxInjectPercent specifies the ratio of maximum pods
+                    involved in the chaos to be injected later.  A value of less than
+                    or equal to 0, or greater than 100, we see it as illegal. It takes
+                    no effects for the protection.
+                  type: integer
+              type: object
             scheduler:
               description: Scheduler defines some schedule rules to control the running
                 time of the chaos experiment about pods.
@@ -227,6 +238,8 @@ spec:
                   format: date-time
                   type: string
               type: object
+            maxInjectNumPods:
+              type: integer
             phase:
               description: Phase is the chaos status.
               type: string
